<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Squpper</string>
    <string name="welcome_string">Nothing to it</string>
    <string name="welcome_string_2">But to do it</string>
    <string name="start_button">Begin</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_squpper">Do it</string>
    <string name="exercise_name_squat">Squat</string>
    <string name="exercise_name_pushup">Push-up</string>
    <string name="next_button">Next</string>
    <string name="finish_button">Finish</string>
    <string name="title_activity_results">Results</string>
    <string name="total_squats">Total Squats</string>
    <string name="total_squats_results"></string>
    <string name="total_pushups">Total Pushups</string>
    <!-- <string name="total_pushups_results"></string>-->
    <string name="restart_button">Restart</string>

</resources>
